mis primeras modificaciones

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <h1>mi titulo</h1>
     <h2>mi titulo</h2>
-    <h3>mi titulo</h3>
-    <h4>mi titulo</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, non.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga sed tenetur quaerat quod consectetur quibusdam similique, ad qui necessitatibus facere.</p>
+    <h3>curso de CSS</h3>
 </body>
 </html>
