ingreso un parrafo y alineo texto h2

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, non.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga sed tenetur quaerat quod consectetur quibusdam similique, ad qui necessitatibus facere.</p>
     <h3>curso de CSS</h3>
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
